--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 pandas
 scikit-learn
 flask
-pandas-profiling
-ipywidgets
-dvc
-flask
-mlflow
+flask-cors
+#pandas-profiling
+#ipywidgets
+#dvc
+#mlflow
 pycaret
-kneed
+#kneed
 SQLAlchemy
+gunicorn
